PROJECT(XD_SERVER_CPP)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# 设置工程根目录
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}/../")
# 设置可执行目录
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/bin/")
# 设置库目录
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/build/lib/")

#INCLUDE_DIRECTORIES(
#  ${CMAKE_SOURCE_DIR}/3rd
#  ${CMAKE_SOURCE_DIR}/3rd/pb/protobuf_src
#  ${CMAKE_SOURCE_DIR}/3rd/pb
#)

SET(MYCFLAGES "$ENV{CFLAGS}")
SET(MYCXXFLAGES "$ENV{CXXFLAGS} -std=c++0x")

SET(CMAKE_C_FLAGS "${MYCFLAGES} -g -O0")
SET(CMAKE_C_FLAGS_DEBUG "${MYCFLAGES} -g -O0")
SET(CMAKE_C_FLAGS_RELEASE "${MYCFLAGES} -g -O0")
SET(CMAKE_CXX_FLAGS "${MYCXXFLAGES} -g -O0")
SET(CMAKE_CXX_FLAGS_DEBUG "${MYCXXFLAGES} -g -O0")
SET(CMAKE_CXX_FLAGS_RELEASE "${MYCXXFLAGES} -g -O0")

SET(OS_WIN32 0)
SET(OS_APPLE 0)
SET(OS_LINUX 0)

IF(WIN32)
    SET(OS_WIN32 1)
ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    SET(OS_APPLE 1)
ELSE()
    SET(OS_LINUX 1)
ENDIF()

# 添加基础库
ADD_SUBDIRECTORY(xd)
# 第三方库
ADD_SUBDIRECTORY(3rd)
# pb
ADD_SUBDIRECTORY(pb)
# 应用
# 服务器
ADD_SUBDIRECTORY(servers)
# cpp服务
#ADD_SUBDIRECTORY(service)
# 测试
ADD_SUBDIRECTORY(test)
#ADD_SUBDIRECTORY(testcpp)
