SET(PROTOBASEDIR google/protobuf)
INCLUDE_DIRECTORIES(.)

FILE(GLOB_RECURSE SRCBASEPB ${PROTOBASEDIR}/*.cc ${PROTOBASEDIR}/*.h)
FILE(GLOB_RECURSE SRCCOMPLIERPB ${PROTOBASEDIR}/compiler/*.cc ${PROTOBASEDIR}/compiler/*.h)
FILE(GLOB_RECURSE SRCIOPB ${PROTOBASEDIR}/io/*.cc ${PROTOBASEDIR}/io/*.h)
FILE(GLOB_RECURSE SRCSTUBPB ${PROTOBASEDIR}/stubs/*.cc ${PROTOBASEDIR}/stubs/*.h)

SOURCE_GROUP("pb" FILES ${SRCBASEPB})
SOURCE_GROUP("compiler" FILES ${SRCCOMPLIERPB})
SOURCE_GROUP("io" FILES ${SRCIOPB})
SOURCE_GROUP("stubs" FILES ${SRCSTUBPB})

ADD_LIBRARY(protobuf ${SRCBASEPB}
                     ${SRCCOMPLIERPB}
                     ${SRCIOPB}
                     ${SRCSTUBPB})
